# Slovedapi

./: LICENSE  README.md  api.py  pyproject.toml  requirements.txt  versal.json
templates/: index.html
