[project]
name = "audio-processor-api"
version = "1.0.0"
description = "Async FastAPI-based audio processing service with AudioAlter integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "uvloop",
    "aiofiles",
    "aiohttp",
    "python-multipart",
    "jinja2",
    "cloudscraper",
    "beautifulsoup4",
]

[project.scripts]
app = "api:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["templates*", "static*", "assets*", "frontend*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/the-matrix9/Slovedapi/audio-processor-api"
Issues = "https://github.com/the-matrix9/Slovedapi/issues"
Documentation = "https://github.com/the-matrix9/Slovedapi#readme"

[project.authors]
name = "Rishu"
email = "abirxdhackzhehdb@example.com"
